[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "impsort"
version = "0.0.1"
authors = [
  { name="AntiMach", email="themachinumps@gmail.com" },
]
description = "A CLI for sorting import stantements"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]


[project.scripts]
symdexer = "impsort.__main__:main"

[project.urls]
"Homepage" = "https://github.com/antimach/impsort"